# Starstruck

./: .gitignore  README.md
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt  verify_ingestion.py
backend/app/: config.py  main.py
backend/app/connectors/: __init__.py  github.py  instagram.py  letterboxd.py  linkedin.py  spotify.py
backend/app/graph/nodes/: analyze.py  coach.py  crossref.py  ingest.py  venue.py
backend/app/models/: schemas.py  state.py
backend/app/services/: findings.py  llm.py  places.py  preview.py
backend/tests/: test_analyze.py  test_api_endpoints.py  test_crossref.py  test_github.py  test_instagram.py  test_letterboxd.py  test_linkedin.py  test_pipeline_ingestion.py  test_spotify.py
context/: cupidgraph_architecture.jsx
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  ArchitectureView.tsx
frontend/src/components/ConnectAccounts/: BottomSheet.tsx  ConnectAccounts.tsx  ServiceCard.tsx  connectAccounts.css  icons.tsx
frontend/src/components/DemoMovie/: DemoMovie.tsx  demoData.ts
frontend/src/components/Landing/: Landing.tsx
frontend/src/components/PhotoUpload/: PhotoUpload.tsx
frontend/src/components/ProfileAnalysis/: ProfileAnalysis.tsx
frontend/src/components/SwipeScreen/: CoachView.tsx  SwipeScreen.tsx  types.ts
frontend/src/services/: api.ts
